--- a/src/main/resources/com/mmn/circuitscourts/fxml/Login/Login.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Login/Login.fxml
@@ -24,7 +24,7 @@
                                 <Insets bottom="15.0" top="50.0" />
                             </VBox.margin>
                         </TextField>
-                        <PasswordField maxHeight="40.0" maxWidth="340.0" prefHeight="40.0" styleClass="password-input" promptText="Entrez votre mot de passe">
+                        <PasswordField maxHeight="40.0" maxWidth="340.0" prefHeight="40.0" styleClass="password-input" promptText="Entrez votre mot de passe" fx:id="passwordField">
                             <VBox.margin>
                                 <Insets bottom="30.0" top="15.0" />
                             </VBox.margin>
