--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Dashboard.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Dashboard.fxml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.SVGPath?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<StackPane fx:id="stackPane" minHeight="700.0" minWidth="1000.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.producteur.ProducteurController">
+<StackPane fx:id="stackPane" minHeight="700.0" minWidth="1000.0" style="-fx-background-color: #EAECF0;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.producteur.ProducteurController">
    <children>
       <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
          <left>
@@ -119,8 +110,8 @@
                               </VBox>
                               <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="120.0" VBox.vgrow="ALWAYS">
                                  <children>
-                                    <Label text="Commandes" styleClass="dashboard-stats-order-title"/>
-                                    <Label text="50" styleClass="dashboard-stats-order-number" />
+                                    <Label styleClass="dashboard-stats-order-title" text="Commandes" />
+                                    <Label styleClass="dashboard-stats-order-number" text="50" />
                                  </children>
                               </VBox>
                            </children>
@@ -135,6 +126,9 @@
                      <VBox.margin>
                         <Insets top="30.0" />
                      </VBox.margin>
+                     <children>
+                        <ListView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" fx:id="feedActivityList" styleClass="dashboard-feed-list"/>
+                     </children>
                   </VBox>
                </children>
             </VBox>
