--- a/src/main/resources/com/mmn/circuitscourts/fxml/Login/Login.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Login/Login.fxml
@@ -29,7 +29,7 @@
                                 <Insets bottom="30.0" top="15.0" />
                             </VBox.margin>
                         </PasswordField>
-                        <Button fx:id="button" mnemonicParsing="false" text="Se connecter !" styleClass="bouton" onMouseClicked="#switchScene" disable="true">
+                        <Button fx:id="button" mnemonicParsing="false" text="Se connecter !" styleClass="bouton" onMouseClicked="#onLogin" disable="true">
                             <VBox.margin>
                                 <Insets bottom="50.0" top="10.0" />
                             </VBox.margin>
