--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Tournees.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Tournees.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.mmn.circuitscourts.fxml.Producteur.Tournees"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<StackPane fx:id="stackPane" minHeight="700.0" minWidth="1000.0" style="-fx-background-color: #EAECF0;"
+           stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.mmn.circuitscourts.controller.producteur.TourneeController">
+    <children>
+        <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
+            <left>
+                <fx:include source="Sidebar.fxml"/>
+            </left>
+            <center>
+
+            </center>
+        </BorderPane>
+    </children>
+</StackPane>
