🚧Starting the LoginSystem, update DAO and update SQL file

--- a/src/main/resources/com/mmn/circuitscourts/css/style.css
+++ b/src/main/resources/com/mmn/circuitscourts/css/style.css
@@ -90,6 +90,11 @@
     -fx-border-color: red;
 }
 
+.login-error {
+    -fx-text-fill: red;
+    -fx-font: 12px 'Inter';
+}
+
 /* PasswordField -> Password Input */
 .password-input {
     -fx-cursor: text;
