--- a/src/main/resources/com/mmn/circuitscourts/fxml/Login/Login.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Login/Login.fxml
@@ -19,6 +19,7 @@
                                 <Insets bottom="50.0" />
                             </VBox.margin>
                         </Label>
+                        <Label fx:id="errorLabel" styleClass="login-error"/>
                         <TextField fx:id="textField" maxHeight="40.0" maxWidth="340.0" prefHeight="40.0" prefWidth="340.0" styleClass="login-input" promptText="Entrez votre identifiant">
                             <VBox.margin>
                                 <Insets bottom="15.0" top="50.0" />
