--- a/src/main/resources/com/mmn/circuitscourts/fxml/Client/Dashboard.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Client/Dashboard.fxml
@@ -8,12 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.mmn.circuitscourts.controller.client.ClientController"
             prefHeight="400.0" prefWidth="600.0">
-
-    <children>
-        <VBox alignment="CENTER">
-            <Label text="Test view"/>
-        </VBox>
-    </children>
 
 </AnchorPane>
