--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Commandes.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Commandes.fxml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.layout.Region?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
            stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="com.mmn.circuitscourts.controller.producteur.CommandesController">
@@ -13,6 +22,41 @@
             </left>
             <center>
 
+            </center>
+            <center>
+                <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label text="Commandes" styleClass="main-title" />
+                        <TableView fx:id="tableView" prefHeight="500.0" prefWidth="950.0">
+                            <columns>
+                                <TableColumn fx:id="numero" prefWidth="177.2" text="Numéro"/>
+                                <TableColumn fx:id="libelle" prefWidth="177.2" text="Libellé"/>
+                                <TableColumn fx:id="poids" prefWidth="177.2" text="Poids"/>
+                                <TableColumn fx:id="horaire" prefWidth="177.2" text="Horaire"/>
+                                <TableColumn fx:id="dateCommande" prefWidth="177.2"
+                                             text="Date de commande"/>
+                                <TableColumn prefWidth="64" styleClass="commande-tableview-column" text=""/>
+                            </columns>
+                            <VBox.margin>
+                                <Insets top="50.0"/>
+                            </VBox.margin>
+                        </TableView>
+                        <Pane>
+                            <children>
+                                <Button fx:id="addButton" layoutX="867.0" layoutY="-24.0" mnemonicParsing="false"
+                                        prefHeight="48.0" prefWidth="48.0" styleClass="addButton"
+                                        textAlignment="CENTER">
+                                    <graphic>
+                                        <Region styleClass="addButton-img"/>
+                                    </graphic>
+                                </Button>
+                            </children>
+                        </Pane>
+                    </children>
+                    <BorderPane.margin>
+                        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0"/>
+                    </BorderPane.margin>
+                </VBox>
             </center>
         </BorderPane>
     </children>
