--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Commandes.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Commandes.fxml
@@ -3,20 +3,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.layout.Region?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: #EAECF0;"
            stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="com.mmn.circuitscourts.controller.producteur.CommandesController">
     <children>
-        <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
+        <BorderPane fx:id="container" style="-fx-background-color: white" prefHeight="700.0" prefWidth="1000.0">
             <left>
                 <fx:include source="Sidebar.fxml"/>
             </left>
@@ -26,21 +24,132 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Label text="Commandes" styleClass="main-title" />
-                        <TableView fx:id="tableView" prefHeight="500.0" prefWidth="950.0">
-                            <columns>
-                                <TableColumn fx:id="numero" prefWidth="177.2" text="Numéro"/>
-                                <TableColumn fx:id="libelle" prefWidth="177.2" text="Libellé"/>
-                                <TableColumn fx:id="poids" prefWidth="177.2" text="Poids"/>
-                                <TableColumn fx:id="horaire" prefWidth="177.2" text="Horaire"/>
-                                <TableColumn fx:id="dateCommande" prefWidth="177.2"
-                                             text="Date de commande"/>
-                                <TableColumn prefWidth="64" styleClass="commande-tableview-column" text=""/>
-                            </columns>
+                        <Label styleClass="main-title" text="Commandes">
                             <VBox.margin>
-                                <Insets top="50.0"/>
+                                <Insets bottom="50.0"/>
                             </VBox.margin>
-                        </TableView>
+                        </Label>
+                        <VBox prefHeight="500" prefWidth="950" styleClass="commande-tableview">
+                            <children>
+                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="950"
+                                      styleClass="commande-tableview-header">
+                                    <children>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               maxWidth="151.0" prefWidth="151.0"
+                                               styleClass="commande-tableview-header-title" text="Numéro">
+                                            <HBox.margin>
+                                                <Insets left="40.0"/>
+                                            </HBox.margin>
+                                        </Label>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               prefWidth="151.0" styleClass="commande-tableview-header-title"
+                                               text="Libellé"></Label>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               maxWidth="151.0" prefWidth="151.0"
+                                               styleClass="commande-tableview-header-title" text="Poids"></Label>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               prefWidth="151.0" styleClass="commande-tableview-header-title"
+                                               text="Horaire"></Label>
+                                        <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308"
+                                               prefWidth="151.0" styleClass="commande-tableview-header-title"
+                                               text="Date de commande"></Label>
+                                    </children>
+                                    <padding>
+                                        <Insets right="40.0"/>
+                                    </padding>
+                                </HBox>
+                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950"
+                                      styleClass="commande-tableview-line">
+                                    <children>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="1"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                    </children>
+                                    <padding>
+                                        <Insets left="40.0" right="40.0"/>
+                                    </padding>
+                                </HBox>
+                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950"
+                                      styleClass="commande-tableview-line">
+                                    <children>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="1"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                    </children>
+                                    <padding>
+                                        <Insets left="40.0" right="40.0"/>
+                                    </padding>
+                                </HBox>
+                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950"
+                                      styleClass="commande-tableview-line">
+                                    <children>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="1"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                    </children>
+                                    <padding>
+                                        <Insets left="40.0" right="40.0"/>
+                                    </padding>
+                                </HBox>
+                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950"
+                                      styleClass="commande-tableview-line">
+                                    <children>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="1"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                    </children>
+                                    <padding>
+                                        <Insets left="40.0" right="40.0"/>
+                                    </padding>
+                                </HBox>
+                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950"
+                                      styleClass="commande-tableview-line">
+                                    <children>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="1"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" text="test"
+                                               styleClass="commande-tableview-line-cell"/>
+                                    </children>
+                                    <padding>
+                                        <Insets left="40.0" right="40.0"/>
+                                    </padding>
+                                </HBox>
+                            </children>
+                        </VBox>
                         <Pane>
                             <children>
                                 <Button fx:id="addButton" layoutX="867.0" layoutY="-24.0" mnemonicParsing="false"
