--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Commandes.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Commandes.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -24,9 +25,9 @@
                                 <Insets bottom="75.0" />
                             </VBox.margin>
                         </Label>
-                        <VBox fx:id="commandeTable" prefHeight="500" prefWidth="950" styleClass="commande-tableview">
+                        <VBox fx:id="commandeTable" prefHeight="500" prefWidth="950.0" styleClass="commande-tableview">
                             <children>
-                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="950" styleClass="commande-tableview-header">
+                                <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="871.0" styleClass="commande-tableview-header">
                                     <children>
                                         <Label alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="151.0" prefWidth="151.0" styleClass="commande-tableview-header-title" text="Numéro">
                                             <HBox.margin>
@@ -42,71 +43,20 @@
                                         <Insets right="40.0" />
                                     </padding>
                                 </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950" styleClass="commande-tableview-line">
-                                    <children>
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="1" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                    </children>
-                                    <padding>
-                                        <Insets left="40.0" right="40.0" />
-                                    </padding>
-                                </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950" styleClass="commande-tableview-line">
-                                    <children>
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="1" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                    </children>
-                                    <padding>
-                                        <Insets left="40.0" right="40.0" />
-                                    </padding>
-                                </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950" styleClass="commande-tableview-line">
-                                    <children>
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="1" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                    </children>
-                                    <padding>
-                                        <Insets left="40.0" right="40.0" />
-                                    </padding>
-                                </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950" styleClass="commande-tableview-line">
-                                    <children>
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="1" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                    </children>
-                                    <padding>
-                                        <Insets left="40.0" right="40.0" />
-                                    </padding>
-                                </HBox>
-                                <HBox alignment="CENTER_LEFT" prefHeight="64" prefWidth="950" styleClass="commande-tableview-line">
-                                    <children>
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="1" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                        <Label maxHeight="1.7976931348623157E308" prefWidth="151.0" styleClass="commande-tableview-line-cell" text="test" />
-                                    </children>
-                                    <padding>
-                                        <Insets left="40.0" right="40.0" />
-                                    </padding>
-                                </HBox>
+                        <ScrollPane prefHeight="444.0" prefWidth="869.0">
+                           <content>
+                              <VBox style="-fx-background-color: white;" fx:id="contentTable">
+                                 <children>
+
+                                 </children>
+                              </VBox>
+                           </content>
+                        </ScrollPane>
                             </children>
                         </VBox>
                         <Pane>
                             <children>
-                                <Button fx:id="addButton" layoutX="847.0" layoutY="-24.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="48.0" styleClass="addButton" textAlignment="CENTER">
+                                <Button fx:id="addButton" layoutX="847.0" layoutY="-24.0" mnemonicParsing="false" onMouseClicked="#onAddButton" prefHeight="48.0" prefWidth="48.0" styleClass="addButton" textAlignment="CENTER">
                                     <graphic>
                                         <Region styleClass="addButton-img" />
                                     </graphic>
